--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -5,7 +5,7 @@ body {
 }
 
 header, footer {
-    background-color: rgb(54, 61, 74);
+    background-color: rgba(54, 61, 74, 0.5);
 }
 
 body, select, option {
@@ -17,6 +17,9 @@ body, select, option {
 header {
     display: flex;
     justify-content: center;
+    position: fixed;
+    width: 100%;
+    backdrop-filter: blur(5px);
 }
 
 nav {
@@ -29,10 +32,16 @@ nav {
 }
 
 .category:hover {
-    background-color: rgb(76, 82, 94);
+    background-color: rgba(76, 82, 94, 0.5);
 }
 
 a {
     color: rgb(224, 224, 224);
     text-decoration: none;
+}
+
+.tmp_rec {
+    background-color: red;
+    height: 2000px;
+    width: 50%;;
 }
