--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -21,18 +21,30 @@ header {
     position: fixed;
     width: 100%;
     backdrop-filter: blur(5px);
-  }
+    border-bottom:  1px solid rgba(29, 34, 41, 0.5);
+}
   
+input {
+    background-color: rgba(37, 43, 52, 0.9);
+}
 
+input:focus {
+    box-shadow: inset 0 0 0 2px rgb(112, 186, 250);
+}
 
 nav {
     display: flex;
-    /* background-color: white; */
 }
 
-.category, .category_active, .select, .submit_ad {
+.category, .category_active, select,  .submit_ad, input {
     padding: 16px 24px 16px 24px;
     color: rgb(255, 255, 255);
+    border: none;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1rem;
+    font-weight: 700;
+    outline: none;
+
 }
 
 .category:hover, .submit_ad:hover {
@@ -57,12 +69,11 @@ a {
 
 select {
     color: rgb(255, 255, 255);
-    background-color: rgba(84, 61, 74, 0.5);
-    border: none;
+    background-color: rgba(37, 43, 52, 0.9);
 }
 
 select option {
-    background-color: rgb(84, 61, 74);
+    background-color: rgba(54, 61, 74, 0.9);
 }
 
 select option:hover {
