--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-family: "Montserrat", sans-serif;
+}
+
 body {
     margin: 0px;
     background-color:  #21262E;
@@ -9,8 +16,6 @@ header, footer {
 }
 
 body, select, option {
-    font-family: "Montserrat", sans-serif;
-    font-size: 1rem;
     font-weight: 700;
 }
 
@@ -36,27 +41,22 @@ nav {
     display: flex;
 }
 
-.category, .category_active, select,  .submit_ad, input {
+.category, select,  .submit_ad, input {
     padding: 16px 24px 16px 24px;
     color: rgb(255, 255, 255);
     border: none;
     font-family: "Montserrat", sans-serif;
-    font-size: 1rem;
     font-weight: 700;
     outline: none;
 
 }
 
-.category:hover, .submit_ad:hover  {
-    background-color: rgba(76, 82, 94, 0.5);
+.category:not(.active):hover, .submit_ad:hover  {
+    background-color: rgba(255, 255, 255, 0.05);
     box-shadow: inset 0 0 0 1px rgba(91, 148, 198, 0.5);
 }
 
-select:hover {
-    box-shadow: inset 0 0 0 1px rgba(91, 148, 198, 0.5);
-}
-
-.category_active {
+.active {
     color: white;
     background-color: rgba(112, 186, 250, 0.5);
     box-shadow: inset 0 0 0 2px rgb(112, 186, 250);
