--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -57,10 +57,11 @@ nav {
     outline: none;
 }
 
-.category:not(.active):hover, .submit_ad:hover  {
+.category:not(.active):hover  {
     background-color: rgba(255, 255, 255, 0.05);
     box-shadow: inset 0 0 0 1px rgba(91, 148, 198, 0.5);
 }
+
 
 .active {
     color: white;
