--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -39,6 +39,10 @@ input {
     background-color: rgba(37, 43, 52, 0.9);
 }
 
+input::placeholder {
+    color: rgb(224, 224, 224);
+}
+
 input:focus, select:focus {
     box-shadow: inset 0 0 0 2px rgb(112, 186, 250);
 }
@@ -90,10 +94,8 @@ select option:hover {
 }
 
 .tmp_rec {
-    background-color: red;
     height: 2000px;
     width: 50%;;
-    background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff);
 
 }
 
