--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -61,7 +61,7 @@ nav {
 }
 
 .category:not(.active):hover  {
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgb(76, 82, 94);
     box-shadow: inset 0 0 0 1px rgba(91, 148, 198, 0.5);
 }
 
