--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -107,23 +107,32 @@ select option:hover {
 .card {
     background-color: rgb(54, 61, 74);
 
-    width: 200px;
-    height: 400px;
-    margin: 30px;
+    /* height: 400px; */
     border-radius: 15px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     border: 1px solid rgb(29, 34, 41);
 }
 
+section {
+    /* background-color: red; */
+    width: 70%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 .content {
+    display: flex;
+    flex-direction: column;
     padding: 20px;
 }
 
-
+ion-icon {
+    font-size: 200px;
+}
 /* https://youtu.be/hv0rNxr1XXk */
