--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -90,41 +90,34 @@ select option {
     background-color: rgba(54, 61, 74, 0.9);
 }
 
-select option:hover {
-    background-color: red;
-}
-
-.tmp_rec {
-    height: 2000px;
-    width: 50%;;
-
-}
-
 .padding {
-    height: 200px;
+    height: 180px;
 }
 
-.card {
+/* .card {
     background-color: rgb(54, 61, 74);
+    background-color: greenyellow;
 
-    /* height: 400px; */
     border-radius: 15px;
-
 
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     border: 1px solid rgb(29, 34, 41);
+}  */
+
+.card {
+    background-color: rgb(54, 61, 74);
+    display: flex;
+    width: 300px;
+
+    border-radius: 4px;
+
+    border: 1px solid rgb(29, 34, 41);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-section {
-    /* background-color: red; */
-    width: 70%;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
+
 
 .content {
     display: flex;
@@ -132,7 +125,9 @@ section {
     padding: 20px;
 }
 
-ion-icon {
-    font-size: 200px;
+section{
+    height: 1800px;
+    width: 60%;
+    margin: auto;
+    border: 1px solid rgb(29, 34, 41);
 }
-/* https://youtu.be/hv0rNxr1XXk */
