--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -128,9 +128,13 @@ select option {
 }
 
 section {
-    height: 1800px;
     width: 60%;
     margin: auto;
     border: 1px solid rgb(29, 34, 41);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+}
+
+.container {
+    background-color:  #21262E;
+    margin: 10px;
 }
