--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -137,4 +137,10 @@ section {
 .container {
     background-color:  #21262E;
     margin: 10px;
+    padding: 10px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
