--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -17,7 +17,7 @@ body {
     
 }
 
-header, footer, section {
+header, footer, section, .card {
     background-color: rgb(54, 61, 74);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
@@ -106,8 +106,6 @@ select option {
 }  */
 
 .card {
-    background-color: rgb(54, 61, 74);
-    background-color: rgba(112, 186, 250, 0.5);
     display: flex;
     width: 320px;
     border-radius: 4px;
