--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -111,8 +111,8 @@ select option {
     border-radius: 4px;
 
     border: 1px solid rgb(29, 34, 41);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    /* border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5); */
 }
 
 
