--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -10,14 +10,17 @@
 
 body {
     margin: 0px;
-    background-color:  #21262E;
     color: rgb(224, 224, 224);
     background: radial-gradient(circle at center top, rgb(54, 61, 74), rgb(29, 34, 41));
     background-attachment: fixed;
-    
 }
 
-header, footer, section, .card {
+body, input {
+    background-color:  rgb(29, 34, 41);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+}
+
+header, footer, .card {
     background-color: rgb(54, 61, 74);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
@@ -27,6 +30,7 @@ body, select, option {
 }
 
 header {
+    background-color: rgba(54, 61, 74, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,10 +39,7 @@ header {
     backdrop-filter: blur(5px);
     border-bottom:  1px solid rgb(29, 34, 41);
 }
-  
-input {
-    background-color: rgba(37, 43, 52, 0.9);
-}
+
 
 input::placeholder {
     color: rgb(224, 224, 224);
@@ -94,25 +95,13 @@ select option {
     height: 180px;
 }
 
-/* .card {
-    background-color: rgb(54, 61, 74);
-    background-color: greenyellow;
-
-    border-radius: 15px;
-
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    border: 1px solid rgb(29, 34, 41);
-}  */
-
 .card {
     display: flex;
     width: 320px;
     border-radius: 4px;
 
     border: 1px solid rgb(29, 34, 41);
-    /* border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5); */
+
 }
 
 
@@ -130,10 +119,10 @@ section {
     margin: auto;
     border: 1px solid rgb(29, 34, 41);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    background-color: rgb(37, 43, 52);
 }
 
 .container {
-    background-color:  #21262E;
     margin: 10px;
     padding: 10px;
 
