--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -17,7 +17,6 @@ body {
 
 body, input {
     background-color:  rgb(29, 34, 41);
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
 
 header, footer, .card {
@@ -97,7 +96,6 @@ select option {
 
 .card {
     display: flex;
-    width: 320px;
     border-radius: 4px;
 
     border: 1px solid rgb(29, 34, 41);
@@ -109,23 +107,25 @@ select option {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 20px;
+    /* padding: 20px; */
     width: 300px;
-    background-color: red;
-
+    /* background-color: red; */
 }
 
 section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 60%;
+    gap: 20px;
     margin: auto;
-    border: 1px solid rgb(29, 34, 41);
+    /* border: 1px solid rgb(29, 34, 41);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
-    background-color: rgb(37, 43, 52);
+    background-color: rgb(37, 43, 52); */
 }
 
 .container {
-    margin: 10px;
-    padding: 10px;
+    margin: 20px;
 
     display: flex;
     flex-wrap: wrap;
