--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,6 @@
 body {
     margin: 0px;
     color: rgb(224, 224, 224);
-    background: radial-gradient(circle at center top, rgb(54, 61, 74), rgb(29, 34, 41));
-    background: linear-gradient(to right, rgb(29, 34, 41), rgb(54, 61, 74), rgb(29, 34, 41));
     background-attachment: fixed;
 }
 
@@ -37,6 +35,7 @@ header {
     width: 100%;
     backdrop-filter: blur(5px);
     border-bottom:  1px solid rgb(29, 34, 41);
+
 }
 
 
@@ -92,25 +91,43 @@ select option {
 
 .padding {
     height: 180px;
+    height: 80px;
 }
 
 .card {
+    transform: scale(1);
     display: flex;
     border-radius: 4px;
     padding: 5px;
 
     border: 1px solid rgb(29, 34, 41);
-
 }
 
+.card {
+    transform: scale(0);
+    animation: scaleUp 0.25s forwards;
+}
+
+@keyframes scaleUp {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+.card:hover {
+
+}
 
 .content {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
-    /* padding: 20px; */
-    width: 300px;
-    /* background-color: red; */
+    color: white;
 }
 
 section {
