--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ header {
     position: fixed;
     width: 100%;
     border-bottom:  1px solid rgb(29, 34, 41);
+    z-index: 1000;
 }
 
 input::placeholder {
