--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ nav {
 }
 
 .active {
-    color: white;
+    color: rgb(112, 186, 250);
     background-color: rgb(55, 79, 102);
     box-shadow: inset 0 0 0 2px rgb(112, 186, 250);
 }
