--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,10 @@ nav {
     color: rgb(142, 239, 151);
 }
 
+.submit_ad:active {
+    box-shadow: inset 0 0 0 2px rgb(0, 255, 0); /* green color */
+}
+
 a {
     color: rgb(112, 186, 250);
     text-decoration: none;
