--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body, input {
 }
 
 header, footer, .card {
-    background-color: rgb(54, 61, 74);
+    background-color: rgb(55, 79, 102);
     border: 1px solid rgb(29, 34, 41);
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
@@ -58,13 +58,12 @@ nav {
     outline: none;
 }
 
-.category:not(.active):hover  {
+/* .category:not(.active):hover  {
     background-color: rgb(76, 82, 94);
-}
+} */
 
 .active {
     color: rgb(112, 186, 250);
-    background-color: rgb(55, 79, 102);
     box-shadow: inset 0 0 0 2px rgb(112, 186, 250);
 }
 
@@ -109,10 +108,6 @@ select option {
     100% {
         transform: scale(1);
     }
-}
-
-.card:hover {
-    background-color: rgb(76, 82, 94);
 }
 
 .content {
