--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ body, input {
 header, footer, .card {
     background-color: rgb(55, 79, 102);
     border: 1px solid rgb(29, 34, 41);
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25); */
+
 }
 
 body, select, option {
@@ -94,6 +95,8 @@ select option {
     display: flex;
     border-radius: 4px;
     padding: 5px;
+    box-shadow: inset 0 0 0 1px rgb(114, 119, 128);
+
 }
 
 .animate {
