--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,15 +18,11 @@ body, input {
     background-color:  rgb(29, 34, 41);
 }
 
-header, footer, .card {
+header, footer, .card, select option {
     background-color: rgb(55, 79, 102);
-    border: 1px solid rgb(29, 34, 41);
-    /* box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25); */
-    box-shadow: inset 0 0 0 1px rgb(114, 119, 128);
-
 }
 
-body, select, option {
+body {
     font-weight: 700;
 }
 
@@ -36,7 +32,6 @@ header {
     align-items: center;
     position: fixed;
     width: 100%;
-    border-bottom:  1px solid rgb(29, 34, 41);
     z-index: 1000;
 }
 
@@ -52,17 +47,28 @@ nav {
     display: flex;
 }
 
-.category, select, .submit_ad, input, form {
+.category {
     padding: 16px 24px 16px 24px;
     color: rgb(224, 224, 224);
-    border: none;
     font-weight: 700;
     outline: none;
+    background-color: rgb(55, 79, 102);
+    transition: background-color 0.5s ease;
 }
 
-/* .category:not(.active):hover  {
-    background-color: rgb(76, 82, 94);
-} */
+.category:active {
+    background-color: rgb(112, 186, 250);
+    animation: changeColor 1s forwards;
+}
+
+@keyframes changeColor {
+    0% {
+        background-color: rgb(112, 186, 250);
+    }
+    100% {
+        background-color: rgb(55, 79, 102);
+    }
+}
 
 .active {
     color: rgb(112, 186, 250);
@@ -79,11 +85,12 @@ a {
 }
 
 select {
-    background-color: rgb(37, 43, 52, 1);
-}
-
-select option {
-    background-color: rgb(54, 61, 74, 1);
+    background-color: rgb(55, 79, 102);
+    padding: 16px 24px 16px 24px;
+    color: rgb(224, 224, 224);
+    border: none;
+    font-weight: 700;
+    outline: none;
 }
 
 .padding {
@@ -96,6 +103,9 @@ select option {
     display: flex;
     border-radius: 4px;
     padding: 5px;
+    /* border: 1px solid rgb(114, 119, 128); */
+    /* box-shadow: inset 0 0 0 1px rgb(114, 119, 128); */
+
 }
 
 .animate {
