--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,18 @@ body {
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     position: fixed;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    z-index: 1000;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
     width: 100%;
     z-index: 1000;
 }
