--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ body, input {
 header, footer, .card {
     background-color: rgb(55, 79, 102);
     border: 1px solid rgb(114, 119, 128);
-
 }
 
 body {
@@ -68,7 +67,6 @@ nav {
 
 .category:active {
     background-color: rgb(112, 186, 250);
-    animation: changeColor 1s forwards;
 }
 
 @keyframes changeColor {
@@ -78,6 +76,10 @@ nav {
     100% {
         background-color: rgb(55, 79, 102);
     }
+}
+
+.animating {
+    animation: changeColor 0.2s forwards;
 }
 
 .active {
