--- a/zfront/assets/css/style.css
+++ b/zfront/assets/css/style.css
@@ -156,3 +156,11 @@ section {
 .icon {
     font-size: 2rem;
 }
+
+.card2 {
+    width: 320px;
+    height: 450px;
+    background-color: white;
+    border-radius:  20px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
+}
