--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,13 +4,38 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        
         {% block stylesheets %}
+        
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
-
         {% block javascripts %}
         {% endblock %}
     </head>
     <body>
+        <header>
+            <nav>
+
+            <select name="departments">
+                <option value="01">01 - Ain</option>
+                <option value="02">02 - Aisne</option>
+            </select>
+
+
+            <a class="category" href="#">Immobilier</a>
+            <a class="category" href="#">Véhicules</a>
+            <a class="category" href="#">Vacances</a>
+            <a class="category" href="#">Mode</a>
+            <a class="category" href="#">Maison</a>
+            <a class="category" href="#">Multimédia</a>
+            <a class="category" href="#">Loisirs</a>
+            <a class="category" href="#">Autres</a>
+
+            <a class="category submit_ad" href="#">Poster une annonce</a>
+            </nav>
+        </header>
+
+
         {% block body %}{% endblock %}
     </body>
 </html>
