--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,20 @@
         <header>
             <nav>
 
+
+            <input type="radio" name="option" id="option1">
+            <label for="option1">Immobilier</label>
+
+            <input type="radio" name="option" id="option2">
+            <label for="option2">Véhicules</label>
+
+            <input type="radio" name="option" id="option3">
+            <label for="option3">Vacances</label>
+
+
+
+
+
             <select name="departments">
                 <option value="01">01 - Ain</option>
                 <option value="02">02 - Aisne</option>
