--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}e-commerce{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         
         {% block stylesheets %}
         
-        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/stylea.css') }}">
         {% endblock %}
         {% block javascripts %}
         {% endblock %}
@@ -15,20 +15,6 @@
     <body>
         <header>
             <nav>
-
-
-            <input type="radio" name="option" id="option1">
-            <label for="option1">Immobilier</label>
-
-            <input type="radio" name="option" id="option2">
-            <label for="option2">Véhicules</label>
-
-            <input type="radio" name="option" id="option3">
-            <label for="option3">Vacances</label>
-
-
-
-
 
             <select name="departments">
                 <option value="01">01 - Ain</option>
