--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
         
         {% block stylesheets %}
         
-        <link rel="stylesheet" href="{{ asset('css/stylea.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
         {% block javascripts %}
         {% endblock %}
@@ -15,7 +15,6 @@
     <body>
         <header>
             <nav>
-
             <select name="departments">
                 <option value="01">01 - Ain</option>
                 <option value="02">02 - Aisne</option>
