--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,15 @@
             </nav>
         </header>
 
+        <div class="padding"></div>
+
+
+        <section>
 
         {% block body %}{% endblock %}
+
+        </section>
+
+        <footer>Chat</footer>
     </body>
 </html>
