--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,9 +52,9 @@ nav {
     outline: none;
 }
 
-.category:hover {
-    background-color: rgb(76, 82, 94);
+.category:hover, select:hover {
     background-image: linear-gradient(to bottom, rgb(76, 82, 94), rgb(54, 61, 74));
+    cursor: pointer;
 }
 
 .submit_ad {
@@ -80,14 +80,29 @@ select {
 
 
 
-
-
-
-
 .padding {
     height: 180px;
     height: 80px;
 }
+
+
+
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    gap: 20px;
+    margin: auto;
+}
+
+
+
+
+
+
+
+
 
 .card {
     display: flex;
@@ -101,21 +116,9 @@ select {
     color: rgb(224, 224, 224);
 }
 
-section {
-    display: flex;
-    flex-wrap: wrap;
-    width: 60%;
-    gap: 20px;
-    margin: auto;
-}
 
-.container {
-    margin: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}
+
+
 
 .icon {
     font-size: 2rem;
