--- a/public/css/styley.css
+++ b/public/css/styley.css
@@ -29,7 +29,7 @@ header {
     justify-content: center;
     width: 100%;
     z-index: 1000;
-    box-shadow: 0 0px 1px black;
+    box-shadow: 0px 0px 1px black;
 }
 
 footer {
