--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,4 +3,12 @@
 {% block body %}
 {{ nom }}
 aaaaAAAAA
+
+
+{# {{ for article in articles }}
+{{ article.title }}
+
+{{ endfor }} #}
+
+
 {% endblock %}
