--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,10 +91,10 @@ select {
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 60%;
+    margin: 0 24.22%;
     gap: 20px;
-    margin: auto;
 }
+
 
 
 
