--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
         
         {% block stylesheets %}
         
-        <link rel="stylesheet" href="{{ asset('css/styley.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
         {% block javascripts %}
         {% endblock %}
