--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
             </select>
 
 
-            <a class="category" href="#">Immobilier</a>
+            <a class="category" href="{{ path('home') }}">Immobilier</a>
             <a class="category" href="#">Véhicules</a>
             <a class="category" href="#">Vacances</a>
             <a class="category" href="#">Mode</a>
