--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 
 
 
-<a href="#" class="card">
+<a href="{{ path('ad') }}" class="card">
     <div class="content">
         {{ ad.title }} {{ ad.createdAt | date('d/m/Y') }} à {{ ad.createdAt | date('H:i') }}
         <img src="{{ ad.image }}" alt="Photo annonce">
