--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% for ad in advertisements %}
+{% for ad in ads %}
 
 
 <a href="{{ path('ad' , {'id':ad.id}) }}" class="card">
