--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,13 +15,16 @@
     <body>
         <header>
             <nav>
+
+            <a class="category" href="{{ path('home') }}">Accueil</a>
+
             <select name="departments">
                 <option value="01">01 - Ain</option>
                 <option value="02">02 - Aisne</option>
             </select>
 
 
-            <a class="category" href="{{ path('home') }}">Immobilier</a>
+            <a class="category" href="#">Immobilier</a>
             <a class="category" href="#">Véhicules</a>
             <a class="category" href="#">Vacances</a>
             <a class="category" href="#">Mode</a>
