--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,11 @@ select {
     color: rgb(224, 224, 224);
 }
 
+.img_ad {
+    width: 300;
+    height: 225;
+}
+
 .photos {
     display: flex;
     flex-direction: column;
