--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
 				<a class="category" href="#">Loisirs</a>
 				<a class="category" href="#">Autres</a>
 
-				<a class="category submit_ad" href="#">Publier une annonce</a>
+				<a class="category submit_ad" href=" {{ path('ad_create') }} ">Publier une annonce</a>
 			</nav>
 		</header>
 
