--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ footer,
 .card {
     background-color: rgb(54, 61, 74);
     background-image: linear-gradient(to bottom, rgb(54, 61, 74), rgb(37, 43, 52));
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 5px black;
 }
 
 header {
@@ -67,6 +67,7 @@ select:hover {
 
 a {
     color: rgb(112, 186, 250);
+    color: rgb(142, 239, 151);
     text-decoration: none;
 }
 
