--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -2,25 +2,33 @@
 
 {% block body %}
 
-<div class="card">
+	<div class="card">
 
-<div class="photos">
+		<div class="photos">
 
-<img src="{{ ad.image }}" alt="Photo annonce">
-<img src="{{ ad.image }}" alt="Photo annonce">
-<img src="{{ ad.image }}" alt="Photo annonce">
+			<img src="{{ ad.image }}" alt="Photo annonce">
+			<img src="{{ ad.image }}" alt="Photo annonce">
+			<img src="{{ ad.image }}" alt="Photo annonce">
 
-</div>
+		</div>
 
-<div class="content">
-<h2>
-{{ ad.title }}
-</h2>
+		<div class="content">
 
-publié le {{ ad.createdAt | date('d/m/Y') }} à {{ ad.createdAt | date('H:i') }}
-<div>{{ ad.content }}</div>
-</div>
+			<a href=" {{ path('home') }} ">
+				<ion-icon class="icon" name="arrow-back-sharp"></ion-icon>
+			</a>
+			<h2>
+				{{ ad.title }}
+			</h2>
 
-</div>
+			publié le
+			{{ ad.createdAt | date('d/m/Y') }}
+			à
+			{{ ad.createdAt | date('H:i') }}
+			<div>{{ ad.content }}</div>
+
+		</div>
+
+	</div>
 
 {% endblock %}
