--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -2,15 +2,16 @@
 
 {% block body %}
 
-	<div class="card">
+	<div
+		class="card">
 
-		<div class="photos">
-
-			<img src="{{ ad.image }}" alt="Photo annonce">
-			<img src="{{ ad.image }}" alt="Photo annonce">
-			<img src="{{ ad.image }}" alt="Photo annonce">
-
-		</div>
+		{# <div class="photos">
+						
+									<img src="{{ ad.image }}" alt="Photo annonce">
+									<img src="{{ ad.image }}" alt="Photo annonce">
+									<img src="{{ ad.image }}" alt="Photo annonce">
+						
+								</div> #}
 
 		<div class="content">
 
