--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,8 +22,8 @@ header,
 footer,
 .card {
     background-color: rgb(54, 61, 74);
-    background-image: linear-gradient(to bottom, rgb(54, 61, 74), rgb(37, 43, 52));
-    box-shadow: 0px 0px 5px black;
+    background-image: linear-gradient(to bottom, rgb(76, 82, 94), rgb(54, 61, 74));
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
 header {
@@ -56,7 +56,6 @@ nav {
 
 .category:hover,
 select:hover {
-    background-image: linear-gradient(to bottom, rgb(76, 82, 94), rgb(54, 61, 74));
     cursor: pointer;
     color: white;
 }
@@ -104,12 +103,10 @@ select {
     display: flex;
     border-radius: 4px;
     padding: 5px;
-}
-
-.content {
-    display: flex;
     flex-direction: column;
     color: rgb(224, 224, 224);
+
+
 }
 
 .img_ad {
