--- a/templates/pages/create.html.twig
+++ b/templates/pages/create.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 
+	<a href=" {{ path('home') }} ">
+		<ion-icon class="icon" name="arrow-back-sharp"></ion-icon>
+	</a>
 	NEW
 
 {% endblock %}
