--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -4,15 +4,16 @@
 
 	{% for ad in ads %}
 
-		<a href="{{ path('ad_show' , {'id':ad.id}) }}" class="card">
-			<div class="content">
-				{{ ad.title }}
-				{{ ad.createdAt | date('d/m/Y') }}
-				à
-				{{ ad.createdAt | date('H:i') }}
-				<img src="{{ ad.image }}" alt="Photo annonce">
-				<div>{{ ad.content }}</div>
-			</div>
+		<a
+			href="{{ path('ad_show' , {'id':ad.id}) }}" class="card">
+			{# <div class="content"> #}
+			{{ ad.title }}
+			{{ ad.createdAt | date('d/m/Y') }}
+			à
+			{{ ad.createdAt | date('H:i') }}
+			<img class="img_ad" src="{{ ad.image }}" alt="Photo annonce">
+			<div>{{ ad.content }}</div>
+			{# </div> #}
 		</a>
 
 	{% endfor %}
