--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,8 +42,9 @@
 		<div class="padding"></div>
 
 		<div class="container"> {% block body %}{% endblock %}
-
 			</div>
+
+			<div class="padding"></div>
 
 			<footer>Chat</footer>
 
