--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -9,7 +9,7 @@
 			{{ ad.createdAt | date('d/m/Y') }}
 			à
 			{{ ad.createdAt | date('H:i') }}
-			<img class="img_ad" src="{{ ad.image }}" alt="Photo annonce">
+			<img src="{{ ad.image }}" alt="Photo annonce">
 			<div>{{ ad.content }}</div>
 		</a>
 
